# RotterdamHackathon

./: .env  .gitignore  .pre-commit-config.yaml  Justfile  README.md  main.py  pyproject.toml  story_datamodel.json
agents/data_extractor_agent/: agent.py
agents/duplicate_remover_agent/: agent.py
atlance/: .env
duplicate_remover_agent/: agent.py
fe_atlance/: PLAN.md  TODO.md
mcp_database/: .env.template  .gitignore  PLAN.md  QUICKSTART.md  TODO.md  drizzle.config.ts  package.json  tsconfig.json
mcp_database/src/: index.ts
mcp_database/src/db/: connection.ts  schema.ts
mcp_database/src/tools/: delete-story.ts  list-stories.ts  read-story.ts  update-story.ts  write-story.ts
mcp_database/src/types/: story.ts
python/: pyproject.toml
python/atlance/: agent.py
python/atlance/sub_agents/data_extractor_agent/: agent.py
python/atlance/sub_agents/duplicate_remover_agent/: agent.py
python/atlance/sub_agents/landmark_search_agent/: agent.py
python/atlance/sub_agents/question_asker/: agent.py
tests/: test_agent.py
